c4prj2_input/grade.txt
Grading at Sat Aug  3 07:17:04 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:25:23: error: lvalue required as unary ‘&’ operand
           card_t* c = &card_from_letters(str[i], str[i+1]);
                       ^
Compilation of input.c failed

Overall Grade: F
